# operating_system-apple

./: .gitignore  system.xcconfig
___aaa_node_gnome/: copydesk.cpp  display.h  notify_icon.cpp
___aaa_node_gtk/: copydesk.cpp  display.h
___aaa_node_kde/: copydesk.cpp  display.h  notify_icon.cpp
___aaa_node_xfce/: copydesk.cpp  display.h
___aaa_windowing_x11/: display.cpp  display.h  window.cpp  x11_simple_ui_display.cpp  x11_simple_ui_display.h
___aaa_windowing_xcb/: display.cpp  display.h  window.cpp  (+2 more)
acme_apple/: CAHostTimeBase.h  CMakeLists.txt  DDInvocationGrabber.h  DDInvocationGrabber.mm  NSMetadataQueryHandler.h  NSMetadataQueryHandler.mm  NSObject+DDExtensions.h  NSObject+DDExtensions.mm  NSString+SymlinksAndAliases.mm  UncaughtExceptionHandler.h  UncaughtExceptionHandler.mm  _.cpp  _.h  _acme_apple.h  _apple.mm  _c_mm.h  _cg_context.cpp  _factory.cpp  _library.h  _mm.h  _mm_common.h  _references.txt  aaa_stdio_file.cpp  aaa_stdio_file.h  acme_apple.cbp  acme_dir.h  acme_directory.cpp  acme_directory.h  acme_file.cpp  acme_file.h  acme_path.cpp  acme_path.h  debug.cpp  directory_system.cpp  directory_system.h  exception_translator.cpp  exception_translator.h  factory_exchange.cpp  file.mm  file_context.cpp  (+34 more)
acme_apple/acme_apple.xcodeproj/: project.pbxproj
acme_apple/acme_apple.xcodeproj/project.xcworkspace/xcuserdata/camilo.xcuserdatad/: UserInterfaceState.xcuserstate
acme_apple/acme_apple.xcodeproj/xcuserdata/camilo.xcuserdatad/xcschemes/: xcschememanagement.plist
acme_apple/acme_apple.xcodeproj/xcuserdata/riteshpatel.xcuserdatad/xcschemes/: xcschememanagement.plist
apex_apple/: CMakeLists.txt  _.cpp  _.h  _apex_apple.h  _apple.mm  _c_mm.h  _factory.cpp  _library.h  _mm.h  _mm_common.h  _references.txt  aaa_apple_timer.cpp  aaa_process copy.cpp  aaa_user.cpp  datetime.cpp  datetime.h  factory_exchange.cpp  file_context.h  framework.h  node.cpp  node.h  process copy.cpp  process copy.h  process.cpp  process.h  reachability.cpp  reachability.h
apex_apple/__archive/: file_os_watcher.cpp  file_os_watcher.h
apex_apple/apex_apple.xcodeproj/: project.pbxproj
apex_apple/apex_apple.xcodeproj/project.xcworkspace/xcuserdata/camilo.xcuserdatad/: UserInterfaceState.xcuserstate
apex_apple/apex_apple.xcodeproj/xcuserdata/camilo.xcuserdatad/xcschemes/: xcschememanagement.plist
apex_apple/apex_apple.xcodeproj/xcuserdata/riteshpatel.xcuserdatad/xcschemes/: xcschememanagement.plist
apex_apple/apex_posix.xcodeproj/xcuserdata/camilo.xcuserdatad/xcschemes/: xcschememanagement.plist
audio_core_audio/: CMakeLists.txt  _.h  _audio_core_audio.h  _factory.cpp  _library.h  aligned.h  aligned_pointer.h  factory_exchange.cpp  framework.cpp  framework.h  toolbox.cpp  toolbox.h  translation.cpp  translation.h  wave_in.cpp  wave_in.h  wave_out.cpp  wave_out.h
audio_core_audio/audio_core_audio.xcodeproj/: project.pbxproj
aura_apple/: CMakeLists.txt  _.cpp  _.h  _aura_apple.h  _factory.cpp  _library.h  _mm.h  _references.txt  aaa_application.cpp  aaa_clipboard_data.h  aaa_shell.h  aaa_user.cpp  aaa_x_window.h  aaa_xim_keyboard.cpp  aaaashell.cpp  factory_exchange.cpp  file_image.cpp  framework.cpp  framework.h  image.cpp  image.mm  node.cpp  node.h  user.h
aura_apple/aura_apple.xcodeproj/: project.pbxproj
aura_apple/aura_apple.xcodeproj/project.xcworkspace/xcuserdata/camilo.xcuserdatad/: UserInterfaceState.xcuserstate
aura_apple/aura_apple.xcodeproj/xcuserdata/camilo.xcuserdatad/xcschemes/: xcschememanagement.plist
aura_apple/aura_apple.xcodeproj/xcuserdata/riteshpatel.xcuserdatad/xcschemes/: xcschememanagement.plist
aura_apple/aura_apple/aura_apple/: aura_apple.h  aura_apple.m
aura_apple/aura_apple/aura_apple.xcodeproj/: project.pbxproj
aura_apple/aura_apple/aura_apple.xcodeproj/project.xcworkspace/xcuserdata/camilo.xcuserdatad/: UserInterfaceState.xcuserstate
music_midi_core_midi/: CMakeLists.txt  _.cpp  _.h  _factory.cpp  _library.h  _music_midi_core_audio.h  _music_midi_core_midi.h  aaa_buffer.cpp  aaa_music_midi_core_audio.h  aaa_port_thread.cpp  aaa_port_thread.h  aaa_sequence.cpp  aaa_sequence.h  aaa_sequence_thread.cpp  aaa_sequence_thread.h  dls_synth_message_out.cpp  dls_synth_message_out.h  factory_exchange.cpp  factory_exchange.h  framework.cpp  framework.h  input_base.cpp  input_base.h  message_in.cpp  message_in.h  message_out.cpp  message_out.h  midi.cpp  midi.h  midi2.h  mm.mm  music_midi_core_midi.h  music_midi_core_midi.mm  music_midi_core_midi_instrument.h  music_midi_core_midi_intrument.mm  output_base.cpp  output_base.h  port_thread.h  sequence.cpp  sequence.h  (+4 more)
music_midi_core_midi/music_midi_core_midi.xcodeproj/: project.pbxproj
music_midi_core_midi/player/: music_midi_core_audio_player.cpp  music_midi_core_audio_player.h
write_text_quartz2d/: CMakeLists.txt  _.cpp  _.h  _draw2d_gdiplus.vcxproj  _draw2d_gdiplus_vs12.vcxproj  _factory.cpp  _write_text_quartz2d.h  enum.mm  factory_exchange.cpp  font_department.cpp  font_department.h  font_enumeration.cpp  font_enumeration.h  font_enumeration.mm  fonts.cpp  fonts.h  framework.cpp  framework.h  write_text.cpp  write_text.h  write_text_pango.vcxproj
write_text_quartz2d/write_text_quartz2d.xcodeproj/: project.pbxproj
write_text_quartz2d/write_text_quartz2d.xcodeproj/project.xcworkspace/xcuserdata/camilo.xcuserdatad/: UserInterfaceState.xcuserstate
write_text_quartz2d/write_text_quartz2d.xcodeproj/xcuserdata/camilo.xcuserdatad/xcschemes/: xcschememanagement.plist
write_text_quartz2d/write_text_quartz2d.xcodeproj/xcuserdata/riteshpatel.xcuserdatad/xcschemes/: xcschememanagement.plist
write_text_quartz2d/write_text_quartz2d/write_text_quartz2d/: write_text_quartz2d.h  write_text_quartz2d.m
write_text_quartz2d/write_text_quartz2d/write_text_quartz2d.xcodeproj/: project.pbxproj
write_text_quartz2d/write_text_quartz2d/write_text_quartz2d.xcodeproj/project.xcworkspace/xcuserdata/camilo.xcuserdatad/: UserInterfaceState.xcuserstate
write_text_quartz2d/write_text_quartz2d/write_text_quartz2d.xcodeproj/xcuserdata/camilo.xcuserdatad/xcschemes/: xcschememanagement.plist
(+256 files in other folders)
